<resources>
    <string name="app_name">quiz</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="age_text">Age</string>
    <string name="phone_text">Phone</string>
    <string name="address_text">Address</string>
    <string name="friends_tag">Friends</string>
    <string name="invalid_login">Invalid Credentials</string>
</resources>